чистка класса MeshNormalComputer